# Automobile-Traffic-Simulation

./: .gitignore  CMakeLists.txt  CourseWork.sln  README.md  build.sh  master
CourseWork/: CourseWork.vcxproj  CourseWork.vcxproj.filters  algorithms.h  backup.c  camera.h  cars.h  fragment_shader.glsl  gl.h  glad.c  gui.h  main.c  map.h  road.h  serviceMacros.h  shader.h  vertex_shader.glsl
CourseWork/shaders/: vertex_shader.glsl
include/: algorithms.h  camera.h  cars.h  cross.h  dbg.h  direction.h  gui.h  log.h  macros.h  map.h  render.h  rlc.h  road.h  search_tools.h  shader.h  spawn_logs.h  texture.h  traffic_density.h  traffic_light.h
source/: algorithms.c  algorithms.h  camera.c  cars.c  cross.c  dbg.c  gl.h  gui.c  gui.h  log.c  main.c  map.c  render.c  roads.c  search_tools.c  service_macros.h  shader.c  shader.h  spawn_logs.c  texture.c  traffic_density.c  traffic_light.c
source/shaders/: fBackground.glsl  fCar.glsl  fragment_shader.glsl  shader_code  vBackground.glsl  vCar.glsl  vertex_shader.glsl
